--- a/wiki/gib.wikitext
+++ b/wiki/gib.wikitext
@@ -1,5 +1,10 @@
 ==English==
 
+===Abbreviation===
+'''GiB'''
+
+# Abbreviation for [[Gibibyte]] or Gibibytes.
+
 ===Etymology===
 Popularised by a [[first-person]] shooter computer game called Quake, the noun gib was a shortened form of [[giblets]] (so is pronounced ''jib''). It refers to the bloody body parts of someone that has exploded. The gaming community began using it as a verb form and other first-person shooter games put it into more common usage.
 
