--- a/wiki/agnosia.wikitext
+++ b/wiki/agnosia.wikitext
@@ -1,7 +1,6 @@
 =={{En}}==
 ===Noun===
-# The loss of ability to recognize familiar objects or people, as a result of damage to the brain.
-
+#  from the Greek meaning 'not knowing'. A failure in object recognition which is not due to a general intellectual impairment, sensory impairment or language disorder. Most usually applied to visual object agnosia, but note that other forms can exist (e.g. tactile agnosia, auditory agnosia).
 ----
 
 ==Italian==
