/* Related terms */ <memory#21061>

--- a/wiki/memory.wikitext
+++ b/wiki/memory.wikitext
@@ -92,7 +92,9 @@
 *French: [[mémoire]] (gender?) (1, 2, 3, 4)
 
 ===Related terms===
+*[[declarative memory]
 *[[false memory]]
+*[[flashbulb memory]]
 *[[memorable]]
 *[[memorial]]
 *[[memorise]], [[memorize]]
@@ -100,7 +102,6 @@
 *[[memory card]]
 *[[mnemonics]]
 *[[mind maps]]
-*[[flashbulb memory]]
 
 ===See also===
 *[[remember]]
