/* Related terms */ <memory#21061>

--- a/wiki/memory.wikitext
+++ b/wiki/memory.wikitext
@@ -92,7 +92,7 @@
 *French: [[mémoire]] (gender?) (1, 2, 3, 4)
 
 ===Related terms===
-*[[declarative memory]
+*[[declarative memory]]
 *[[false memory]]
 *[[flashbulb memory]]
 *[[memorable]]
