--- a/wiki/declarative_memory.wikitext
+++ b/wiki/declarative_memory.wikitext
@@ -2,4 +2,4 @@
 
 '''declarative memory'''
 
-(or explicit memory)  is a type of long term memory in which we store memories of fact, such as mathematical formulas, vocabulary, and life events. Declarative memory is divided further into semantic and episodic memories.
+(or explicit memory)  is a type of long term memory in which we store memories of fact, such as mathematical formulas, vocabulary, and life events. Declarative memory is divided further into [[semantic memory]] and [[episodic memory]].
