/* Noun */ <semantic memory#66152>

--- a/wiki/semantic_memory.wikitext
+++ b/wiki/semantic_memory.wikitext
@@ -2,4 +2,4 @@
 
 '''semantic memory'''
 
-#The part of [[declarative memory]] that stores general information such as names and facts.
+#A subcategory of [[declarative memory]], semantic memory stores general information such as names and facts.
