--- a/wiki/glass.wikitext
+++ b/wiki/glass.wikitext
@@ -18,7 +18,7 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Dutch: [[glaas]] ''n''
+*Dutch: [[glas]] ''n''
 *Finnish: [[lasi#Finnish|lasi]]
 *French: [[verre]] ''m''
 *German: [[Glas]] [[:de:Glas|(de)]] ''n''
@@ -46,7 +46,7 @@ It is possible that ultimate root is from a variant of the Old Teutonic word ''g
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Dutch: [[glaas]] ''n''
+*Dutch: [[glas]] ''n''
 *Finnish: [[lasi#Finnish|lasi]]
 *French: [[verre]] [[:fr:verre|(fr)]] ''m''
 *German: [[Glas]] [[:de:Glas|(de)]] ''n''
