--- a/wiki/sensory_memory.wikitext
+++ b/wiki/sensory_memory.wikitext
@@ -2,4 +2,4 @@
 
 '''sensory memory'''
 
-#The brief storage of information in [[memory]] brought in through the senses; typically only lasts up to a few seconds.
+#The brief storage of information (in [[memory]]) brought in through the senses; typically only lasts up to a few seconds.
