--- a/wiki/byte.wikitext
+++ b/wiki/byte.wikitext
@@ -1,5 +1,5 @@
 ===Noun===
-#usually 8 [[bit]]s long [[computer]] [[memory]]
+#usually 8 [[bit]]s of [[computer]] [[memory]]
 
 ===Translations===
 *Finnish: [[tavu]]
