--- a/wiki/murderer.wikitext
+++ b/wiki/murderer.wikitext
@@ -8,6 +8,7 @@
 *Czech: [[vrah]] ''m''
 *French: [[meurtrier]] ''m''
 *Italian: [[assassino]] ''m''
+*Norwegian: [[morder]] ''m''
 *{{sk}}: [[vrah#Slovak|vrah]] ''m''
 
 ===Related terms===
