--- a/wiki/best.wikitext
+++ b/wiki/best.wikitext
@@ -4,7 +4,9 @@
 #the person (or persons) who is (are) most excellent 
 
 ====Translations====
+*Norwegian: [[beste]] (1)
 *Finnish: [[paras]], [[parhain]], [[parhaimmisto]] (2)
+*Norwegian: [[best]] (2)
 
 ===Transitive verb===
 '''to best'''
@@ -12,6 +14,7 @@
 
 ====Translations====
 *Finnish: [[voittaa]]
+*Norwegian: [[slå]]
 
 ===Adjective===
 '''best'''
@@ -21,6 +24,7 @@
 *Arabic: [[الأفضل]]
 *Finnish: [[paras]]
 *Latin: [[optimus]], ''m'', [[optima]], ''f''
+*Norwegian: [[best]]
 *Romanica: [[optimo]] ''m'', [[optima]] ''f'', le [[melior]] ''m'', la [[melior]] ''f''
 *Spanish: el [[mejor]]
 *Swedish: [[bäst]]
