--- a/wiki/buffoon.wikitext
+++ b/wiki/buffoon.wikitext
@@ -1,4 +1,4 @@
-'''Buffoon''' is a somewhat derogatory term for a [[humour]]ous character who provides amusement principally by [[stupid]]ity rather than [[talent]]. The term [[clown]] is also used, although this word more usually refers to professional entertainers who provide this sort of act for a living.
+'''Buffoon''' is a somewhat derogatory term for a [[humour]]ous character who provides amusement principally by [[stupidity]] rather than [[talent]]. The term [[clown]] is also used, although this word more usually refers to professional entertainers who provide this sort of act for a living.
 
 A person usually becomes a buffoon either through natural disorganisation and clumsiness, or by attempting to gain [[attention]] through [[humour]] but failing to pull it off. An individual may also choose to become a buffoon in order to gain a unique place in a [[social group]], although this is generally a last resort.
 
