--- a/wiki/dogging.wikitext
+++ b/wiki/dogging.wikitext
@@ -6,3 +6,4 @@ From [[dog]] (see definition)
 '''dogging''' (''[[uncountable]]'')
 
 #The practice of having "doggie-style" sex in a public place, often with unknown observers. (Vile sex act)
+2. gathering for the purpose of drinking beer. '' We had been dogging very heavily that night and were feeling very doggish. ''
