--- a/wiki/%21.wikitext
+++ b/wiki/%21.wikitext
@@ -1,5 +1,5 @@
 ==[[Translingual]]==
-==Translingual==
+==[[Translingual]]==
 ===Punctuation mark===
 '''!'''
 <!-- necessary? [[Image:Bang icon 32x32.jpg|!]]-->
