+ German translations <fortnightly#43907>

--- a/wiki/fortnightly.wikitext
+++ b/wiki/fortnightly.wikitext
@@ -3,16 +3,19 @@
 # a publication issued fortnightly
 ==== Translations ====
 *Dutch: [[tweewekelijks]]
+*German: [[Halbmonatsschrift]] ''f''
 *Slovak: [[dojtýždenník]] ''m''
 === Adjective ===
 # occuring once in a [[fortnight]]
 ==== Translations ====
 *Dutch: [[tweewekelijks]]
+*German: [[vierzehntäglich]], [[zweiwöchentlich]]
 *Slovak: [[dvojtýždenný]] -á -é ''m/f/n''
 *Hungarian: [[kéthetenti]]
 === Adverb ===
 # once in a [[fortnight]]
 ==== Translations ====
 *Dutch: [[tweewekelijks]]
+*German: alle [[vierzehn]] [[Tage]], alle [[zwei]] [[Wochen]]
 *Slovak: [[dvojtýždenne]]
 *Hungarian: [[kéthetente]]
