+ german translation <fortnight#1675>

--- a/wiki/fortnight.wikitext
+++ b/wiki/fortnight.wikitext
@@ -13,5 +13,6 @@ Old English "[[fourteen]] [[night]]s"
 
 ====Translations====
 * [[Breton]]: [[pemzektez]] ''m'' -ioù
+*German: [[vierzehn Tage]], [[zwei]] [[Wochen]]
 *Japanese: [[二週間]] (にしゅうかん, nishukan)
 * [[Slovak]]: [[týždeň|dva týždne]] ''m pl''
