/* Noun */ <smiley face#66207>

--- a/wiki/smiley_face.wikitext
+++ b/wiki/smiley_face.wikitext
@@ -1,2 +1,3 @@
 ==Noun==
+==Emoticon==
 A simplified representation of a smiling face, usually as two dots for the eyes and an arc for the mouth,i.e.:O)
