--- a/wiki/playing_card.wikitext
+++ b/wiki/playing_card.wikitext
@@ -4,6 +4,9 @@
 
 #One of usually 52 [[rectangular]] pieces of card used to play numerous games, featuring either one to 10 [[pip]]s or a picture and belonging of one of four [[suit]]s.<!--please improve this def if possible-->
 
+===Translations===
+*German: [[Spielkarte]]
+
 ===Related terms===
 *[[card game]]
 
