--- a/wiki/intermission.wikitext
+++ b/wiki/intermission.wikitext
@@ -8,5 +8,6 @@
 
 == Translations ==
 
-* [[French]]: intermission
-* [[Spanish]]: intermisión
+* French: [[intermission]]
+* German: [[Unterbrechung]], [[Pause]]
+* Spanish: [[intermisión]]
