--- a/wiki/fortnightly.wikitext
+++ b/wiki/fortnightly.wikitext
@@ -12,6 +12,8 @@
 *German: [[vierzehntäglich]], [[zweiwöchentlich]]
 *Slovak: [[dvojtýždenný]] -á -é ''m/f/n''
 *Hungarian: [[kéthetenti]]
+*Spanish: [[bisemanal]]
+
 === Adverb ===
 # once in a [[fortnight]]
 ==== Translations ====
