--- a/wiki/fortnightly.wikitext
+++ b/wiki/fortnightly.wikitext
@@ -21,3 +21,4 @@
 *German: alle [[vierzehn]] [[Tage]], alle [[zwei]] [[Wochen]]
 *Slovak: [[dvojtýždenne]]
 *Hungarian: [[kéthetente]]
+*Spanish: [[bisemanalmente]]
