--- a/wiki/option.wikitext
+++ b/wiki/option.wikitext
@@ -1,6 +1,6 @@
-=Noun=
+==Noun==
 '''option'''
 # One of the choices which can be made
 
-==Translations==
+===Translations===
 *{{fi}}: [[vaihtoehto]]
