--- a/wiki/concentration_camp.wikitext
+++ b/wiki/concentration_camp.wikitext
@@ -4,4 +4,5 @@
 # a camp to hide away, mistreat, even kill, persons viewed as undesirable by the ruling party
 ==== Translations ====
 *Finnish: [[keskitysleiri]]
+*German: [[Konzentrationslager]] ''n''
 *Slovak: [[koncentračný tábor]] ''m'', [[koncentrák]] ''m colloquial''
