--- a/wiki/flak.wikitext
+++ b/wiki/flak.wikitext
@@ -2,4 +2,4 @@
 #Ground-based anti-aircraft guns firing explosive shells. German acronym of ''Fliegerabwehrkanone''.
 #Anti-aircraft shell fire.
 #(''figurative, informal'') Adverse criticism.
-#(''informal'') Public relations spokesperson.
+#(''informal'') Public relations spokesperson. Also spelt [[flack]].
