--- a/wiki/shift.wikitext
+++ b/wiki/shift.wikitext
@@ -7,5 +7,5 @@
 ===Verb===
 
 # To move slightly.
-# To redistribute load. (as in ''shifting weight'' or ''shifting apointments'')
+# To redistribute load. (as in ''shifting weight'' or ''shifting my schedule'')
 # To change gears (in a car).
