--- a/wiki/deaf.wikitext
+++ b/wiki/deaf.wikitext
@@ -53,18 +53,18 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *French: les [[sourd]]s ''m plural''
+*Italian: i [[sordo|sordi]] ''m plural'', i [[non udente|non udenti]] ''m plural''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Italian: i [[sordo|sordi]] ''m plural'', i [[non udente|non udenti]] ''m plural''
+*Russian: [[глухой|глухие]] ''m/f plural''
 |}
 |}
 
 =====Translations to be checked=====
 These translations are for the noun but are singular and need to be plural or collective.  Would native speakers modify them accordingly and insert them into the table above, deleting this section once it is empty.
 *German: [[Taube]] 
-*Russian: [[глухой]] ''m'', [[глухая]] ''f''
 *Spanish: [[sordo]]
 
 ===Derived terms===
