rus, spanish <deaf#52816>

--- a/wiki/deaf.wikitext
+++ b/wiki/deaf.wikitext
@@ -21,11 +21,14 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *French: [[sourd]] ''m'', [[sourde]] ''f''
+*German: [[Taube]]
+*Italian: [[sordo]] ''m'', [[sorda]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Italian: [[sordo]] ''m'', [[sorda]] ''f''
+*Russian: [[глухой]] ''m'', [[глухая]] ''f''
+*Spanish: [[sordo]] ''m''
 |}
 |}
 
