ichabod crane <Ichabod#66198>

--- a/wiki/Ichabod.wikitext
+++ b/wiki/Ichabod.wikitext
@@ -10,3 +10,4 @@
 # A male given name.
 # An [[exclamation]] used when someone has acted without honor.
 #: ''Ichabod, felt Lord Emsworth, and was still in a disturbed state of mind, though gradually becoming soothed by listening to that sweetest of all music, the sound of the Empress restoring her [[tissue]]s...'' -- [[w:P. G. Wodehouse|P. G. Wodehouse]], describing Lord Emsworth's feelings upon hearing his pig, the Empress of Blandings, described as "piggy-wiggy; from his book ''Pigs Have Wings''
+#(''Fiction'') A reference to Ichabod Crane, the victim in the short story "[[w:The Legend of Sleepy Hollow|The Legend of Sleepy Hollow]]" by Washington Irving.
