obscuring the matter <emoticon#3241>

--- a/wiki/emoticon.wikitext
+++ b/wiki/emoticon.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-[[Blend]] of [[emotion]] and [[icon]].
+A [[portmanteau]] word that indicates a [[blend]] of [[emotion]] and [[icon]].
 
 ===Noun===
 '''emoticon''' (''plural'' '''emoticons''')
