biblical addition to the etymology <Ichabod#66198>

--- a/wiki/Ichabod.wikitext
+++ b/wiki/Ichabod.wikitext
@@ -2,7 +2,7 @@
 
 ==Etymology==
 
-''Hebrew'' '''ichabod''' without [[honor]]
+''Hebrew'' '''ichabod''' without [[honor]]; from [[Bible]], son of [[Phinehas]] and grandson of the [[High Priest]] [[Eli]].
 
 ===Proper noun===
 '''Ichabod'''
