--- a/wiki/flak.wikitext
+++ b/wiki/flak.wikitext
@@ -1,5 +1,8 @@
+==English==
+===Etymology===
+German acronym of '''''Fl'''ieger'''a'''bwehr'''k'''anone''. First attested [[w:1940|1940]] as ''an anti-aircraft gun''. Sense of ''adverse criticism'' attested since [[w:1963|1963]] in [[American English]]. 
 ===Noun===
-#Ground-based anti-aircraft guns firing explosive shells. German acronym of ''Fliegerabwehrkanone''.
+#Ground-based anti-aircraft guns firing explosive shells.
 #Anti-aircraft shell fire.
 #(''figurative, informal'') Adverse criticism.
 #(''informal'') Public relations spokesperson. Also spelt [[flack]].
