--- a/wiki/fortnightly.wikitext
+++ b/wiki/fortnightly.wikitext
@@ -1,3 +1,5 @@
+===Etymology===
+*Attested since 17th century, from [[Middle English]] ''[[fourtenight]]'' from [[Old English]] ''[[fēowertēne]] [[niht]]'', "fourteen nights" or ''two weeks''.
 === Noun ===
 '''fortnightly (fortnightlies))'''
 # a publication issued fortnightly
