--- a/wiki/fortnightly.wikitext
+++ b/wiki/fortnightly.wikitext
@@ -1,5 +1,6 @@
 ===Etymology===
-*Attested since 17th century, from [[Middle English]] ''[[fourtenight]]'' from [[Old English]] ''[[fēowertēne]] [[niht]]'', "fourteen nights" or ''two weeks''.
+*Attested since 17th century, from [[Middle English]] ''[[fourtenight]]'', from [[Old English]] ''[[fēowertēne]] [[niht]]'', "fourteen nights" or ''two weeks''.
+
 === Noun ===
 '''fortnightly (fortnightlies))'''
 # a publication issued fortnightly
