/* Noun */ <concentration camp#44108>

--- a/wiki/concentration_camp.wikitext
+++ b/wiki/concentration_camp.wikitext
@@ -2,7 +2,12 @@
 '''concentration camp'''
 # a [[camp]] where large numbers of persons&mdash;such as [[political prisoner|political prisoners]], [[prisoner of war|prisoners of war]], [[refugee|refugees]]&mdash;are detained
 # a camp to hide away, mistreat, even kill, persons viewed as undesirable by the ruling party
+#A situation wherein crowding and extremely harsh conditions take place.
 ==== Translations ====
 *Finnish: [[keskitysleiri]]
 *German: [[Konzentrationslager]] ''n''
+*Russian: [[концлагерь]] ''m'', [[концентрационный лагерь]] ''m''
 *Slovak: [[koncentračný tábor]] ''m'', [[koncentrák]] ''m colloquial''
+
+===See also===
+*[[w:GULAG|Wikipedia's article on GULAG]] (The Chief Directorate of Corrective Labor Camps),  Soviet internal police and security service.
