--- a/wiki/heptagonal.wikitext
+++ b/wiki/heptagonal.wikitext
@@ -1,1 +1,15 @@
-bla bla bla
+==English==
+===Etymology===
+Since 16th century, from [[Greek]] [[heptagonon]], from [[hepta]] "[[seven]]"  + [[gonia]] "[[angle]]".
+===Noun===
+#Having seven angles and sides
+====Related====
+*[[heptagon]]
+*[[septangle]]
+*[[septangular]]
+====Translations====
+*French: [[heptagone]] ''m''
+*German: [[Siebeneck]] ''n''
+*Italian: [[ettagono]] ''m'', [[eptagono]] ''m''
+*Russian: [[семиугольник]] ''m''
+*Spanish: [[heptágono]] ''m''
