--- a/wiki/heptagon.wikitext
+++ b/wiki/heptagon.wikitext
@@ -1,4 +1,6 @@
 ==English==
+===Etymology===
+Since 16th century, from [[Greek]] [[heptagonon]], from [[hepta]] "[[seven]]"  + [[gonia]] "[[angle]]".
 ===Noun===
 '''heptagon'''
 
