--- a/wiki/heptagon.wikitext
+++ b/wiki/heptagon.wikitext
@@ -8,7 +8,10 @@ Since 16th century, from [[Greek]] [[heptagonon]], from [[hepta]] "[[seven]]"  +
 
 ====Translations====
 *French: [[heptagone]] ''m''
-*Italian: [[ettagono]] ''m''
+*German: [[Siebeneck]] ''n''
+*Italian: [[ettagono]] ''m'', [[eptagono]] ''m''
+*Russian: [[семиугольник]] ''m''
+*Spanish: [[heptágono]] ''m''
 
 ====Related words====
 *[[heptagonal]]
