hm, messed up that it is not an article about ''heptagon" :) <heptagonal#66218>

--- a/wiki/heptagonal.wikitext
+++ b/wiki/heptagonal.wikitext
@@ -8,8 +8,8 @@ Since 16th century, from [[Greek]] [[heptagonon]], from [[hepta]] "[[seven]]"  +
 *[[septangle]]
 *[[septangular]]
 ====Translations====
-*French: [[heptagone]] ''m''
-*German: [[Siebeneck]] ''n''
-*Italian: [[ettagono]] ''m'', [[eptagono]] ''m''
-*Russian: [[семиугольник]] ''m''
-*Spanish: [[heptágono]] ''m''
+*French: [[heptagone]]
+*German: [[siebeneckig]]
+*Italian: [[ettagono]], [[ettagonale]]
+*Russian: [[семиугольный]]
+*Spanish: [[heptagonal]], [[heptágono]]
