/* Noun */ <concentration camp#44108>

--- a/wiki/concentration_camp.wikitext
+++ b/wiki/concentration_camp.wikitext
@@ -1,13 +1,14 @@
 === Noun ===
 '''concentration camp'''
-# a [[camp]] where large numbers of persons&mdash;such as [[political prisoner|political prisoners]], [[prisoner of war|prisoners of war]], [[refugee|refugees]]&mdash;are detained
-# a camp to hide away, mistreat, even kill, persons viewed as undesirable by the ruling party
+# a [[camp]] where large numbers of persons&mdash;such as [[political prisoner|political prisoners]], [[prisoner of war|prisoners of war]], [[refugee|refugees]]&mdash;are detained for the purpose of concentrating them in one place.
+# a camp or premises in which persons considered to be undesirable by those who control it are hidden away, mistreated, and even killed.
 #A situation wherein crowding and extremely harsh conditions take place.
 ==== Translations ====
 *Finnish: [[keskitysleiri]]
 *German: [[Konzentrationslager]] ''n''
 *Russian: [[концлагерь]] ''m'', [[концентрационный лагерь]] ''m''
 *Slovak: [[koncentračný tábor]] ''m'', [[koncentrák]] ''m colloquial''
+*Spanish: [[campo de concentración]] ''n''
 
 ===See also===
 *[[w:GULAG|Wikipedia's article on GULAG]] (The Chief Directorate of Corrective Labor Camps),  Soviet internal police and security service.
