--- a/wiki/autodidact.wikitext
+++ b/wiki/autodidact.wikitext
@@ -1,3 +1,18 @@
-=={{en}}==
+==English==
+===Etymology===
+*From [[Greek]] [[autodidaktos]]: [[auto-]] + [[didaktos]] ([[taught]]).
+
 ===Noun===
-# a person who has taught themselves
+#A [[self-taught]] person;
+#: [[Leonardo Da Vinci]] is one of the greatest autodidacts.
+
+====Related====
+*[[autodidactic]]
+*[[self-taught]]
+
+====Translations====
+*French: [[autodidacte]] ''m'',''f''
+*German: [[Autodidakt]] ''m''
+*Italian: [[autodidatto]] ''m'', [[autodidatta]] ''f''
+*Russian: [[автодидакт]] ''m'', [[самоучка]] ''m''
+*Spanish: [[autodidacto]] ''m'', [[autodidacta]] ''f''
