--- a/wiki/autodidact.wikitext
+++ b/wiki/autodidact.wikitext
@@ -1,18 +1,1 @@
-==English==
-===Etymology===
-*From [[Greek]] [[autodidaktos]]: [[auto-]] + [[didaktos]] ([[taught]]).
-
-===Noun===
-#A [[self-taught]] person;
-#: [[Leonardo Da Vinci]] is one of the greatest autodidacts.
-
-====Related====
-*[[autodidactic]]
-*[[self-taught]]
-
-====Translations====
-*French: [[autodidacte]] ''m'',''f''
-*German: [[Autodidakt]] ''m''
-*Italian: [[autodidatto]] ''m'', [[autodidatta]] ''f''
-*Russian: [[автодидакт]] ''m'', [[самоучка]] ''m''
-*Spanish: [[autodidacto]] ''m'', [[autodidacta]] ''f''
+*[[Template:Delete|&#x7B;&#x7B;delete&#x7D;&#x7D;]] &mdash; For pages that need to be deleted.
