--- a/wiki/Ichabod.wikitext
+++ b/wiki/Ichabod.wikitext
@@ -1,7 +1,5 @@
-=English=
-
-==Etymology==
-
+==English==
+===Etymology===
 ''Hebrew'' '''ichabod''' without [[honor]]; from [[Bible]], son of [[Phinehas]] and grandson of the [[High Priest]] [[Eli]].
 
 ===Proper noun===
