--- a/wiki/love.wikitext
+++ b/wiki/love.wikitext
@@ -65,6 +65,7 @@
 *Latvian: [[patikt]], [[mīlēt]]
 *Portuguese: [[adorar]], [[amar]]
 *Russian: [[любить]]
+*Spanish: [[encantar]], [[gustar]]
 |}
 |}
 
@@ -84,6 +85,7 @@
 *Latvian: [[mīlēties]]
 *Portuguese: [[amar]], [[fazer amor]]
 *{{sk}}: [[milovať sa]]
+*Spanish: [[hacer el amor]]
 *Swedish: [[älska]], [[älska med]]
 |}
 |}
