--- a/wiki/diminish.wikitext
+++ b/wiki/diminish.wikitext
@@ -1,8 +1,8 @@
 ==English==
 ===Verb===
 '''diminish'''
-# (''transitive'') to make smaller.
-# (''intransitive'') to become smaller.
+# (''transitive verb'') To make smaller.
+# (''intransitive verb'') To become smaller.
 
 ====Translations====
 * Latin: [[minuere]]
