semicolon in rus trans <simmer#66232>

--- a/wiki/simmer.wikitext
+++ b/wiki/simmer.wikitext
@@ -6,4 +6,4 @@
 #Boil slowly at or below the boiling point
 #: simmering water
 ====Translations====
-*Russian: ''варить, не доводя до кипения'', ''кипятить на медленном огне''
+*Russian: ''варить, не доводя до кипения''; ''кипятить на медленном огне''
