--- a/wiki/bouillon.wikitext
+++ b/wiki/bouillon.wikitext
@@ -7,3 +7,4 @@ First attested 1656, from [[French]] [[bouillir]] "to boil", from [[Old French]]
 *[[broth]]
 ====Translations====
 *Russian: [[бульон]] ''m''
+*Spanish: [[caldo]] ''m''
