--- a/wiki/minuo.wikitext
+++ b/wiki/minuo.wikitext
@@ -5,3 +5,41 @@
 ===Verb===
 ('''minu&#333;''', '''minuere''', '''minu&#299;''', '''min&#363;tum''')
 # To [[diminish]].
+
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> minu&#275;ns
+|style="background:#F7F7F5;" align="center" width=125px| &mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;" align="center"| &mdash;&mdash;
+|style="background:#F7F7F5;"| <big> min&#363;tus
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> minut&#363;rus
+|style="background:#F7F7F5;"| <big> minuendus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> minuere
+|style="background:#F7F7F5;" width=125px| <big> minu&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;"| <big> minuisse
+|style="background:#F7F7F5;"| <big> min&#363;tus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> min&#363;t&#363;rus esse
+|style="background:#F7F7F5;"| <big> min&#363;tum &#299;r&#299;
+|}
