--- a/wiki/police.wikitext
+++ b/wiki/police.wikitext
@@ -2,7 +2,7 @@
 
 ===Noun===
 
-# An individual granted authority to enforce the law.
+# An organisation granted authority to enforce the law.
 
 ===Verb===
 
