--- a/wiki/edit.wikitext
+++ b/wiki/edit.wikitext
@@ -1,5 +1,9 @@
 ==English==
 
+== Etymology ==
+
+According to the ''[[Oxford English Dictionary]]'', ''editor'' comes from the [[Latin language|Latin]] phrase ''e ditus'' which means "to put forward".  The ''editor ludorum'' in [[Ancient Rome]] was the person who put on the games.  In [[French language|French]], ''editeur'' means "publisher".  The word came into [[English language|English]] from French.   The verb ''edit'' is a [[back formation]] from ''editor''.
+
 ===noun===
 To [[change]] a [[text]], or a [[document]].
 
