/* Verb */ Conjugation. <minuo#66234>

--- a/wiki/minuo.wikitext
+++ b/wiki/minuo.wikitext
@@ -43,3 +43,195 @@
 |style="background:#F7F7F5;"| <big> min&#363;t&#363;rus esse
 |style="background:#F7F7F5;"| <big> min&#363;tum &#299;r&#299;
 |}
+
+====Conjugation====
+Third conjugation (3).
+{| border="1" cellpadding="2"
+!style="background:#F1BC4E;" colspan=3| <small>''Number''
+!style="background:#F1BC4E;" colspan=3| <small>''Singular''
+!style="background:#F1BC4E;" colspan=3| <small>''Plural''
+|-
+!style="background:#F1BC4E;" colspan=3| <small>''Tense \ Person''
+!style="background:#F1BC4E;"| <small>''1.''
+!style="background:#F1BC4E;"| <small>''2.''
+!style="background:#F1BC4E;"| <small>''3.''
+!style="background:#F1BC4E;"| <small>''11.''
+!style="background:#F1BC4E;"| <small>''22.''
+!style="background:#F1BC4E;"| <small>''33.''
+|-
+!style="background:#54E9FA;" rowspan=12|<small>I<br>n<br>d<br>i<br>c<br>a<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;" rowspan=6|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|minu&#333;
+|style="background:#FBFCE4;"|minuis
+|style="background:#FBFCE4;"|minuit
+|style="background:#FBFCE4;"|minuimus
+|style="background:#FBFCE4;"|minuitis
+|style="background:#FBFCE4;"|minuunt
+|-
+!style="background:#54E9FA;"| <small>''Future''
+|style="background:#FBFCE4;"|minuam
+|style="background:#FBFCE4;"|minu&#275;s
+|style="background:#FBFCE4;"|minuet
+|style="background:#FBFCE4;"|minu&#275;mus
+|style="background:#FBFCE4;"|minu&#275;tis
+|style="background:#FBFCE4;"|minuent
+|-
+!style="background:#54E9FA;"| <small>''Imperfect''
+|style="background:#FBFCE4;"|minu&#275;bam
+|style="background:#FBFCE4;"|minu&#275;b&#257;s
+|style="background:#FBFCE4;"|minu&#275;bat
+|style="background:#FBFCE4;"|minu&#275;b&#257;mus
+|style="background:#FBFCE4;"|minu&#275;b&#257;tis
+|style="background:#FBFCE4;"|minu&#275;bant
+|-
+!style="background:#54E9FA;"| <small>''Perfect''
+|style="background:#FBFCE4;"|minu&#299;
+|style="background:#FBFCE4;"|minuist&#299;
+|style="background:#FBFCE4;"|minuit
+|style="background:#FBFCE4;"|minuimus
+|style="background:#FBFCE4;"|minuistis
+|style="background:#FBFCE4;"|minu&#275;runt
+|-
+!style="background:#54E9FA;"| <small>''Future Perfect''
+|style="background:#FBFCE4;"|minuer&#333;
+|style="background:#FBFCE4;"|minueris
+|style="background:#FBFCE4;"|minuerit
+|style="background:#FBFCE4;"|minuerimus
+|style="background:#FBFCE4;"|minueritis
+|style="background:#FBFCE4;"|minuerint
+|-
+!style="background:#54E9FA;"| <small>''Pluperfect''
+|style="background:#FBFCE4;"|minueram
+|style="background:#FBFCE4;"|minuer&#257;s
+|style="background:#FBFCE4;"|minuerat
+|style="background:#FBFCE4;"|minuer&#257;mus
+|style="background:#FBFCE4;"|minuer&#257;tis
+|style="background:#FBFCE4;"|minuerant
+|-
+!style="background:#54E9FA;" rowspan=6| <small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|minuor
+|style="background:#FBFCE4;"|minueris
+|style="background:#FBFCE4;"|minuitur
+|style="background:#FBFCE4;"|minuimur
+|style="background:#FBFCE4;"|minuimin&#299;
+|style="background:#FBFCE4;"|minuuntur
+|-
+!style="background:#54E9FA;"|<small>''Future''
+|style="background:#FBFCE4;"|minuar
+|style="background:#FBFCE4;"|minu&#275;ris
+|style="background:#FBFCE4;"|minu&#275;tur
+|style="background:#FBFCE4;"|minu&#275;mur
+|style="background:#FBFCE4;"|minu&#275;min&#299;
+|style="background:#FBFCE4;"|minuentur
+|-
+!style="background:#54E9FA;"|<small>''Imperfect''
+|style="background:#FBFCE4;"|minu&#275;bar
+|style="background:#FBFCE4;"|minu&#275;b&#257;ris
+|style="background:#FBFCE4;"|minu&#275;b&#257;tur
+|style="background:#FBFCE4;"|minu&#275;b&#257;mur
+|style="background:#FBFCE4;"|minu&#275;b&#257;min&#299;
+|style="background:#FBFCE4;"|minu&#275;bantur
+|-
+!style="background:#54E9FA;"|<small>''Perfect''
+|style="background:#FBFCE4;"|min&#363;tus<font color="red"><sup>1</sup></font><br>sum
+|style="background:#FBFCE4;"|min&#363;tus<font color="red"><sup>1</sup></font><br>es
+|style="background:#FBFCE4;"|min&#363;tus<font color="red"><sup>1</sup></font><br>est
+|style="background:#FBFCE4;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>sumus
+|style="background:#FBFCE4;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>estis
+|style="background:#FBFCE4;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>sunt
+|-
+!style="background:#54E9FA;"|<small>''Future Perfect''
+|style="background:#FBFCE4;"|min&#363;tus<font color="red"><sup>1</sup></font><br>er&#333;
+|style="background:#FBFCE4;"|min&#363;tus<font color="red"><sup>1</sup></font><br>eris
+|style="background:#FBFCE4;"|min&#363;tus<font color="red"><sup>1</sup></font><br>erit
+|style="background:#FBFCE4;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>erimus
+|style="background:#FBFCE4;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>eritis
+|style="background:#FBFCE4;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>erunt
+|-
+!style="background:#54E9FA;"|<small>''Pluperfect''
+|style="background:#FBFCE4;"|min&#363;tus<font color="red"><sup>1</sup></font><br>eram
+|style="background:#FBFCE4;"|min&#363;tus<font color="red"><sup>1</sup></font><br>er&#257;s
+|style="background:#FBFCE4;"|min&#363;tus<font color="red"><sup>1</sup></font><br>erat
+|style="background:#FBFCE4;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>er&#257;mus
+|style="background:#FBFCE4;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>er&#257;tis
+|style="background:#FBFCE4;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>erant
+|-
+!style="background:#92B887;" rowspan=8|<small>S<br>u<br>b<br>j<br>u<br>n<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;" rowspan=4|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| minuam
+|style="background:#E7FEE9;"| minu&#257;s
+|style="background:#E7FEE9;"| minuat
+|style="background:#E7FEE9;"| minu&#257;mus
+|style="background:#E7FEE9;"| minu&#257;tis
+|style="background:#E7FEE9;"| minuant
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| minuerem
+|style="background:#E7FEE9;"| minuer&#275;s
+|style="background:#E7FEE9;"| minueret
+|style="background:#E7FEE9;"| minuer&#275;mus
+|style="background:#E7FEE9;"| minuer&#275;tis
+|style="background:#E7FEE9;"| minuerent
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"| minuerim
+|style="background:#E7FEE9;"| minuer&#299;s
+|style="background:#E7FEE9;"| minuerit
+|style="background:#E7FEE9;"| minuer&#299;mus
+|style="background:#E7FEE9;"| minuer&#299;tis
+|style="background:#E7FEE9;"| minuerint
+|-
+!style="background:#92B887;"|<small>''Pluerfect''
+|style="background:#E7FEE9;"| minuissem
+|style="background:#E7FEE9;"| minuiss&#275;s
+|style="background:#E7FEE9;"| minuisset
+|style="background:#E7FEE9;"| minuiss&#275;mus
+|style="background:#E7FEE9;"| minuiss&#275;tis
+|style="background:#E7FEE9;"| minuissent
+|-
+!style="background:#92B887;" rowspan=4|<small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| minuar
+|style="background:#E7FEE9;"| minu&#257;ris
+|style="background:#E7FEE9;"| minu&#257;tur
+|style="background:#E7FEE9;"| minu&#257;mur
+|style="background:#E7FEE9;"| minu&#257;min&#299;
+|style="background:#E7FEE9;"| minuantur
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| minuerer
+|style="background:#E7FEE9;"| minuer&#275;ris
+|style="background:#E7FEE9;"| minuer&#275;tur
+|style="background:#E7FEE9;"| minuer&#275;mur
+|style="background:#E7FEE9;"| minuer&#275;min&#299;
+|style="background:#E7FEE9;"| minuerentur
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"|min&#363;tus<font color="red"><sup>1</sup></font><br>sim
+|style="background:#E7FEE9;"|min&#363;tus<font color="red"><sup>1</sup></font><br>s&#299;s
+|style="background:#E7FEE9;"|min&#363;tus<font color="red"><sup>1</sup></font><br>sit
+|style="background:#E7FEE9;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>s&#299;mus
+|style="background:#E7FEE9;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>s&#299;tis
+|style="background:#E7FEE9;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>sint
+|-
+!style="background:#92B887;"|<small>''Pluperfect''
+|style="background:#E7FEE9;"|min&#363;tus<font color="red"><sup>1</sup></font><br>essem
+|style="background:#E7FEE9;"|min&#363;tus<font color="red"><sup>1</sup></font><br>ess&#275;s
+|style="background:#E7FEE9;"|min&#363;tus<font color="red"><sup>1</sup></font><br>esset
+|style="background:#E7FEE9;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>ess&#275;mus
+|style="background:#E7FEE9;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>ess&#275;tis
+|style="background:#E7FEE9;"|min&#363;t&#299; <font color="red"><sup>2</sup></font><br>essent
+|-
+!style="background:#BD91BD;" colspan=3| <small>Imperative
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| minu&#275;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| minuite
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|}
+<font color="red"> 1 </font> = min&#363;tus / min&#363;ta / min&#363;tum <br>
+<font color="red"> 2 </font> = min&#363;t&#299; / min&#363;tae / min&#363;ta <br>
