--- a/wiki/police.wikitext
+++ b/wiki/police.wikitext
@@ -1,9 +1,30 @@
 ==English==
 
 ===Noun===
+'''police'''
 
 # An organisation granted authority to enforce the law.
+
+====Translations====
+*Chinese: [[警察]] (jingcha)
+*French: police ''f''
+*Italian: [[polizia]] ''f''
+*Japanese: [[警察]] (けいさつ)
+*Vietnamese: [[cảnh sát]]
 
 ===Verb===
 
 # To enforce a set of rules.
+
+----
+
+==French==
+===Noun===
+'''police''' ''f''
+
+# police
+# [[fount]], [[font]]
+
+===Related terms===
+*[[poli]]
+*[[policier]]
