/* Conjugation */ Correction of imperative singular. <minuo#66234>

--- a/wiki/minuo.wikitext
+++ b/wiki/minuo.wikitext
@@ -227,7 +227,7 @@ Third conjugation (3).
 |-
 !style="background:#BD91BD;" colspan=3| <small>Imperative
 |style="background:#FCF2E9;" align="center"|&mdash;&mdash;
-|style="background:#FCF2E9;"| minu&#275;
+|style="background:#FCF2E9;"| minue
 |style="background:#FCF2E9;" align="center"|&mdash;&mdash;
 |style="background:#FCF2E9;" align="center"|&mdash;&mdash;
 |style="background:#FCF2E9;"| minuite
