--- a/wiki/rogare.wikitext
+++ b/wiki/rogare.wikitext
@@ -5,3 +5,41 @@
 ===Verb===
 ('''rog&#333;''', '''rog&#257;re''', '''rog&#257;v&#299;''', '''rog&#257;tum''')
 # To [[ask]].
+
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> rog&#257;ns
+|style="background:#F7F7F5;" align="center" width=125px| &mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;" align="center"| &mdash;&mdash;
+|style="background:#F7F7F5;"| <big> rog&#257;tus
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> rog&#257;t&#363;rus
+|style="background:#F7F7F5;"| <big> rogandus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> rog&#257;re
+|style="background:#F7F7F5;" width=125px| <big> rog&#257;r&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;"| <big> rog&#257;visse
+|style="background:#F7F7F5;"| <big> rog&#257;tus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> rog&#257;t&#363;rus esse
+|style="background:#F7F7F5;"| <big> rog&#257;tum &#299;r&#299;
+|}
