--- a/wiki/%E4%BA%AC.wikitext
+++ b/wiki/%E4%BA%AC.wikitext
@@ -13,7 +13,7 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning''': 
-*#capital city
+*# [[capital]] city
 *#10 millions or 10 trillions
 
 *''Chinese Numeral'' '''京'''
@@ -22,7 +22,7 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]:
@@ -34,15 +34,38 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': ging1
 
+===Compounds===
+*[[京白]]
+*[[京白梨]]
+*[[京菜]]
+*[[京城]]
+*[[京都]]
+*[[京二胡]]
+*[[京官]]
+*[[京胡]]
+*[[京华]]
+*[[京剧]]
+*[[京派]]
+*[[京腔]]
+*[[京师]]
+*[[京味]], [[京味儿]]
+*[[京戏]]
+*[[京韵大鼓]]
+*[[京族]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[きょう]] (kyō), [[けい]] (kei), [[きん]] (king)
 ** '''[[Kun]]''': [[みやこ]] (miyako)
+
+===Compounds===
+*[[京都]]
+*[[京浜]]
 
 * '''Other info''':  
 
