--- a/wiki/rogare.wikitext
+++ b/wiki/rogare.wikitext
@@ -1,3 +1,19 @@
+==Italian==
+===Verb===
+'''rogare'''
+
+# [[draft]]
+
+===Related terms===
+*[[interrogare]]
+*[[rogante]]
+*[[rogatore]]
+*[[rogatoria]]
+*[[rogatorio]]
+*[[rogazione]]
+
+----
+
 ==Latin==
 ===Pronunciation===
 *[[AHD]]: <big> r&#335;-g&#259;' &#259;-r&#277; </big>  
