--- a/wiki/%E7%98%89.wikitext
+++ b/wiki/%E7%98%89.wikitext
@@ -1,3 +1,5 @@
+* '''Alternate form''': [[愈]]
+
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 104''': [[Wiktionary:Chinese radical index 疒|疒]]+9 strokes
 
 * '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 14|14]]
@@ -10,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': get well, recover
+* '''Common Meaning''': [[get well]], [[recover]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,7 +32,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ゆ]] (yu)
