--- a/wiki/%E5%85%83.wikitext
+++ b/wiki/%E5%85%83.wikitext
@@ -30,6 +30,26 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': yun4
 
+===Compounds===
+*[[元宝]]
+*[[元旦]]
+*[[元件]]
+*[[元老]]
+*[[元年]]
+*[[元配]]
+*[[元气]]
+*[[元日]]
+*[[元首]]
+*[[元帅]]
+*[[元素]]
+*[[元素符号]]
+*[[元宵]]
+*[[元宵节]]
+*[[元凶]]
+*[[元勋]]
+*[[元鱼]]
+*[[元月]]
+
 * '''Other info''': 
 
 ----
@@ -39,6 +59,19 @@
 * '''Readings'''
 ** '''[[On]]''': [[げん]] (gen), [[がん]] (gan)
 ** '''[[Kun]]''': [[もと]] (moto), [[こうべ]] (koube)
+
+===Compounds===
+*[[元気]]
+*[[元金]]
+*[[元号]]
+*[[元日]]
+*[[元首]]
+*[[元帥]]
+*[[元祖]]
+*[[元素]]
+*[[元旦]]
+*[[元本]]
+*[[元来]]
 
 * '''Other info''':  
 </font>
