--- a/wiki/%ED%95%9C%EA%B8%80.wikitext
+++ b/wiki/%ED%95%9C%EA%B8%80.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''한[[글]]''' (hangeul)
 
-# [[hangul]], Korean letters
+# [[hangeul]], Korean letters
 
 ===Synonym===
-*[[조선글]] (used in North Korea)
+*[[조선글]] (朝鮮글, used in North Korea)
