--- a/wiki/%EC%84%9D%EB%A5%98.wikitext
+++ b/wiki/%EC%84%9D%EB%A5%98.wikitext
@@ -1,5 +1,13 @@
 ==Korean==
+===Pronunciation===
+*SAMPA: /sVNnju/
 ===Noun===
-'''석류'''
+'''석류''' ([[石榴]], seokryu)
 
 # [[pomegranate]]
+
+===Derived terms===
+*[[석류꽃]]
+*[[석류나무]]
+*[[석류석]]
+*[[석류피]]
