--- a/wiki/vacuum_cleaner.wikitext
+++ b/wiki/vacuum_cleaner.wikitext
@@ -1,1 +1,3 @@
-Domestic and industrial mobile machine for cleaning floors and similar surfaces which operates by suction created by an electric motor whch drives a fan.
+{{-en-}}
+===Noun===
+#Domestic and industrial mobile machine for cleaning floors and similar surfaces which operates by suction created by an electric motor driving a fan.
