--- a/wiki/Wonder_Woman.wikitext
+++ b/wiki/Wonder_Woman.wikitext
@@ -1,5 +1,6 @@
-==English==
-'''[[Wonder Woman]]''' is a [[fictional character]], a [[w:DC Comics|DC Comics]] [[superhero]] created by [[w:William Moulton Marston|William Moulton Marston]].
+{{-en-}}
+===Proper Noun===
+#(''Fiction'') '''[[Wonder Woman]]''' a [[w:DC Comics|DC Comics]] [[superhero]] created by [[w:William Moulton Marston|William Moulton Marston]].
 
 ===See also===
 [[w:wonderwoman|Wikipedia's article on Wonder Woman]]
