--- a/wiki/Wonder_Woman.wikitext
+++ b/wiki/Wonder_Woman.wikitext
@@ -1,6 +1,7 @@
 {{-en-}}
 ===Proper Noun===
-#(''Fiction'') '''[[Wonder Woman]]''' a [[w:DC Comics|DC Comics]] [[superhero]] created by [[w:William Moulton Marston|William Moulton Marston]].
+'''Wonder Woman'''
+#(''Fiction'')  A [[w:DC Comics|DC Comics]] [[superhero]] created by [[w:William Moulton Marston|William Moulton Marston]].
 
 ===See also===
 [[w:wonderwoman|Wikipedia's article on Wonder Woman]]
