conforming change with redirect <‽#53688>

--- a/wiki/%E2%80%BD.wikitext
+++ b/wiki/%E2%80%BD.wikitext
@@ -2,7 +2,7 @@
 ===Punctuation===
 '''‽'''
 
-# A [[symbol]], known as an [[interrobang]], to use in place of !?.
+# A [[symbol]], known as an interrobang, to use in place of !?.
 
 ===See also===
 *[[!?]]
