--- a/wiki/Hoover.wikitext
+++ b/wiki/Hoover.wikitext
@@ -1,8 +1,9 @@
-==Etymology==
-From the trade name of one of the first vacuum cleaners.
-
-==Noun==
-Vacuum cleaner.
-
-==Verb==
-To clean with a vacuum cleaner.
+{{-en-}}
+===Etymology===
+From the brand name of one of the first vacuum cleaners.
+===Noun===
+#[[Vacuum cleaner]].
+===Verb===
+#To clean with a vacuum cleaner.
+===Proper Noun===
+#(''Trademark'') A brand of vacuum cleaner.
