--- a/wiki/monk.wikitext
+++ b/wiki/monk.wikitext
@@ -23,7 +23,7 @@ From Latin ''[[monachus]]'', from Greek ''[[monachos]]'', '''monk''' or single p
 *Italian: [[monaco]] ''m''
 *Latin: [[monachus]] ''m''
 *Persian: [[راهب]] (raheb)
-*{{pl}}: [[mnich]] ''m''
+*{{pl}}: [[mnich]] ''m'', [[mniszka]] ''f''; [[zakonnik]] ''m'', [[siostra zakonna]] ''f''
 *Slovak: [[mních#Slovak|mních]] ''m'' (1, 2, 3), [[rehoľník#Slovak|rehoľník]] ''m'' (3)
 *Slovene: [[menih]] ''m'' (3)
 *Spanish: [[monje]] ''m''
