--- a/wiki/nun.wikitext
+++ b/wiki/nun.wikitext
@@ -22,6 +22,7 @@
 *German: [[Nonne]] ''f''
 *Italian: [[suora]] ''f''
 *Japanese: [[修道女]] (しゅうどうじょ, shudoujo), [[尼僧]] (にそう, nisou)
+*{{pl}}: [[zakonnica]], [[mniszka]], [[siostra zakonna]] ''f''
 *Slovak: [[mníška#Slovak|mníška]] ''f'', [[rehoľníčka#Slovak|rehoľníčka]] ''f''
 *Slovene: [[nuna]] ''f''
 *Spanish: [[monja]] ''f''
