--- a/wiki/%E7%A9%86.wikitext
+++ b/wiki/%E7%A9%86.wikitext
@@ -11,13 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#majestic, solemn, reverent
-*# calm
+*# [[majestic]], [[solemn]], [[reverent]]
+*# [[calm]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -29,11 +29,20 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': muk6
 
+===Compounds===
+*[[穆巴拉克]]
+*[[穆尔西亚]]
+*[[穆罕默德]]
+*[[穆斯林]]
+*[[穆索尔斯基]]
+*[[肃穆]]
+*[[静穆]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ぼく]] (boku), [[もく]] (moku)
