--- a/wiki/neuter.wikitext
+++ b/wiki/neuter.wikitext
@@ -6,31 +6,30 @@ Latin, from ''[[ne]]'' not + ''[[uter]]'' whether; akin to English [[whether]]. 
 #''(Archaic):'' Neither the one thing nor the other; on neither side; impartial; neutral
 #:'''Quotations'''
 #:*In all our undertakings God will be either our friend or our enemy; for Providence never stands '''neuter''' - [[South]]
-#''(Grammar):'' Having a form belonging more especially to words which are not appellations of males or females; expressing or designating that which is of neither sex; as, a neuter noun; a neuter termination; the neuter gender
-#''(Grammar):'' Intransitive; as, a neuter verb.
-#''(Biology):'' Having no generative organs, or imperfectly developed ones; sexless
+#(''Grammar''): Having a form belonging more especially to words which are not appellations of males or females; expressing or designating that which is of neither sex; as, a neuter noun; a neuter termination; the neuter gender
+#(''Grammar''): Intransitive; as, a neuter verb.
+#(''Biology''): Having no generative organs, or imperfectly developed ones; sexless
 
 ====Translations====
+*Greek: [[ουδέτερος]] [[:el:ουδέτερος|el]]
 *swedish: [[neutrum]] (2)
 
 ===Noun===
 #A person who takes no part in a contest; one who is either indifferent to a cause or forbears to interfere; a neutral.
 #:'''Quotations'''
 #:*The world's no '''neuter'''; it will wound or save - [[Young]]
-#''(Grammar):'' A noun of the neuter gender; any one of those words which have the terminations usually found in neuter words
-#''(Grammar):'' An intransitive verb.
-#''(Biology)'' An organism, either vegetable or animal, which at its maturity has no [[generative]] [[organ]]s, or but imperfectly developed ones, as a plant without [[stamen]]s or [[pistil]]s, as the garden [[Hydrangea]]; especially, one of the imperfectly developed females of certain social insects, as of the ant and the common honeybee, which perform the labors of the community, and are called workers.
+#(''Grammar''): A noun of the neuter gender; any one of those words which have the terminations usually found in neuter words
+#(''Grammar''): An intransitive verb.
+#(''Biology'') An organism, either vegetable or animal, which at its maturity has no [[generative]] [[organ]]s, or but imperfectly developed ones, as a plant without [[stamen]]s or [[pistil]]s, as the garden [[Hydrangea]]; especially, one of the imperfectly developed females of certain social insects, as of the ant and the common honeybee, which perform the labors of the community, and are called workers.
 
 ====Translations====
-*swedish: [[neutrum]] (2)
+*Japanese: [[中性]]
+*Swedish: [[neutrum]] (2)
 
 ===Verb===
 '''to neuter''' ([[neuters]], [[neutered]], [[neutering]])
 
 #To [[castrate]] or [[spay]], particularly as applied to domestic animals.
-
-
-
 
 ====Synonyms====
 *[[castrate]] (''said of male animals only''), [[desex]], [[doctor]], [[fix]] (''colloquial''), [[spay]] (''said of female animals only'')
@@ -40,5 +39,3 @@ Latin, from ''[[ne]]'' not + ''[[uter]]'' whether; akin to English [[whether]]. 
 *French: [[neutre]]
 *Greek: [[Ουδέτερος]]<!-- really capitalised? -->
 *German: [[neutrum]], [[sächlich]]
-
-[[el:ουδέτερος]]
