--- a/wiki/multiplication.wikitext
+++ b/wiki/multiplication.wikitext
@@ -1,12 +1,16 @@
 ==English==
 ===Noun===
-(''Mathematics'') The process of multiplying two or more numbers.
+'''multiplication'''
+
+#(''Mathematics'') The process of multiplying two or more numbers.
 
 Multiplication is a [[binary operation]].
 
 When applied to whole numbers, multiplication can be considered as repeated addition.  The multiplication  ''x &times; y''  is the same as  ''x + x + ... + x'',  where the  ''x''  appears  ''y'' times in the addition, or  ''y + y + ... + y'',  where the  ''y''  appears  ''x''  times in the addition.
 
 ====Translations====
+*Chinese character: [[乘]] / [[乗]]
+*Chinese: [[乘法]] (chengfa)
 *Dutch: [[vermenigvuldiging]] ''f''
 *Estonian: [[korrutamine]]
 *Finnish: [[kertolasku]]
@@ -14,10 +18,13 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 *Frisian: [[fermannichfâldiging]]
 *German: [[Multiplikation]] ''f''
 *Italian: [[moltiplicazione]] ''f''
+*Japanese: [[掛け算]] (かけざん), [[乗法]] (じょうほう)
 *Polish: [[mnożenie]] ''n''
 
 ====Related words====
-
+*[[multiplicand]]
+*[[multiplicative]]
+*[[multiplicity]]
 * [[multiply]]
 
 ----
@@ -27,3 +34,11 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 '''multiplication''' ''f''
 
 #multiplication
+
+====Related words====
+*[[multi-]]
+*[[multiple]]
+*[[multiplicande]]
+*[[multiplicatif]]
+*[[multiplicité]]
+*[[multiplier]]
