--- a/wiki/fuzzy.wikitext
+++ b/wiki/fuzzy.wikitext
@@ -1,5 +1,14 @@
-===Adjective===
+==English==
+===Hyphenation===
 '''fuh·zee'''
+===Adjective===
+'''fuzzy'''
 
-# Covered with a large number of tiny loose fibers like a carpet or many stuffed animals.  Mentioned in the popular nursery rhyme "Fuzzy wuzzy was a bear."
+# Covered with a large number of tiny loose fibres like a carpet or many stuffed animals.  Mentioned in the popular nursery rhyme "Fuzzy wuzzy was a bear."
 # Vague or imprecise as in "my recollection of that event is fuzzy."
+
+===Related terms===
+*[[fuzz]]
+*[[fuzzily]]
+*[[fuzziness]]
+*[[fuzzy logic]]
