--- a/wiki/scarlet-collar.wikitext
+++ b/wiki/scarlet-collar.wikitext
@@ -1,1 +1,3 @@
-Of or relating to a female who operates an Internet pornographic venture
+==English==
+===Noun===
+#Of or relating to a female who operates an Internet pornographic venture
