--- a/wiki/dittohead.wikitext
+++ b/wiki/dittohead.wikitext
@@ -4,11 +4,11 @@
 Coined by listeners of Rush Limbaugh's radio show, from the habit of calling in with the single-word comment "Ditto!".
 
 ===Noun===
-'''dittohead''' (''plural:'' [[dittoheads]])
+'''dittohead''' (''plural:'' dittoheads)
 
 #Someone who is a [[fan]] of [[w:Rush Limbaugh|Rush Limbaugh]]'s radio program. A Dittohead needn't agree with anything Rush Limbaugh says; merely enjoying the program is enough to qualify.
 #''Pejorative.'' A person who agrees with Rush Limbaugh unquestioningly.
-#: ''It'll probably never happen, but if Rush Limbaugh and his clear-cut-crazy dittoheads could see this hauntingly beautiful documentary, even they might start choking on one of his favorite epithets, "environmental wacko."'' [http://en.wiktionary.org/wiki/Dittohead#References]
+#: ''It'll probably never happen, but if Rush Limbaugh and his clear-cut-crazy '''dittoheads''' could see this hauntingly beautiful documentary, even they might start choking on one of his favorite epithets, "environmental wacko."'' [http://en.wiktionary.org/wiki/Dittohead#References]
 
 ===References===
 #''The Seattle Times''. "On a mission to save America's natural majesty". Pg. H23. October 1, 2004.
