fmt; deleted enc info; +translations from Wikipedia <Wonder Woman#66248>

--- a/wiki/Wonder_Woman.wikitext
+++ b/wiki/Wonder_Woman.wikitext
@@ -1,7 +1,11 @@
 {{-en-}}
-===Proper Noun===
+===Proper noun===
 '''Wonder Woman'''
-#(''Fiction'')  A [[w:DC Comics|DC Comics]] [[superhero]] created by [[w:William Moulton Marston|William Moulton Marston]].
+#A [[w:DC Comics|DC Comics]] [[superhero]].
+
+====Translations====
+*French: Wonder Woman
+*Portuguese: a [[Mulher Maravilha]]<!--Note: the "a" is the definite article, which is part of the translation in this case-->
 
 ===See also===
-[[w:wonderwoman|Wikipedia's article on Wonder Woman]]
+*[[w:Wonder Woman|Wikipedia's article on Wonder Woman]]
