modified def; +plural, syns, fr: & it: <vacuum cleaner#66245>

--- a/wiki/vacuum_cleaner.wikitext
+++ b/wiki/vacuum_cleaner.wikitext
@@ -1,3 +1,12 @@
 {{-en-}}
 ===Noun===
-#Domestic and industrial mobile machine for cleaning floors and similar surfaces which operates by suction created by an electric motor driving a fan.
+'''vacuum cleaner''' (''plural'' '''vacuum cleaners''')
+
+#A domestic and industrial mobile machine for cleaning floors and similar surfaces, that draws dust, etc, into a container (often a bag) by the suction created by an electric motor driving a fan.
+
+====Synonyms====
+*[[hoover]], [[vacuum]]
+
+====Translations====
+*French: [[aspirateur]] ''m''
+*Italian: [[aspirapolvere]] ''m''
